2009-08-06  Michael Hutchinson  <mhutchinson@novell.com>

	* SyntaxModes/XmlSyntaxMode.xml: Fix BlockCommentEnd value.

2009-08-03  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Worked on coordinate
	  calculation. (Selecting in assembly browser should work now
	  and the new translation function works correct with
	  kerning).

2009-07-31  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Worked on selection
	  drawing/fixed a possible array out of range exception.

2009-07-29  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Caret.cs:
	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/TextLinkEditMode.cs: Ensure that links in
	  text link mode are never inside folded regions.

2009-07-24  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextLinkEditMode.cs:
	* Mono.TextEditor.PopupWindow/TooltipWindow.cs: Fixed "Bug
	  524871 - Redraw issues in link mode". Fixed some tooltip
	  issues.

2009-07-24  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextMarker.cs:
	* Mono.TextEditor/TextLinkEditMode.cs: Fixed "Bug 524870 - F2
	  rename can be activated multiple times".

	* Mono.TextEditor/Document.cs: Fixed that StackUndoToDepth
	  creates an empty undo opertion (could dirty a document under
	  some circumstances).

2009-07-23  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextEditor.cs: Use a method of creating a
	  pixmap for the invisible cursor that doesn't cause a
	  Gdk-Critical on Mac.

2009-07-23  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextLinkEditMode.cs: Fixed "Bug 524313 -
	  Wrong caret position when exiting local rename link mode".

2009-07-23  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextLinkEditMode.cs: Added some null checks.

2009-07-22  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/TextLinkEditMode.cs: Text link edits are now
	  atomic.
